# mcpscan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ML_MODEL.md
mcpscan/: __init__.py  __main__.py  cli.py
mcpscan/graph/: __init__.py  analyzer.py  capability.py
mcpscan/ml/: __init__.py  collector.py  features.py  ml_risk_scorer.py  models.py  risk_scorer.py  trainer.py  training_data.py  validator.py
mcpscan/models/: __init__.py  config.py  finding.py
mcpscan/remediation/: __init__.py  fixer.py  generator.py
mcpscan/reporters/: __init__.py  console.py  json_reporter.py  sarif.py
mcpscan/rules/: __init__.py
mcpscan/scanner/: __init__.py  base.py
mcpscan/scanner/mcp/: __init__.py  rules.py  scanner.py
mcpscan/validator/: __init__.py  schema.py
models/: .gitignore
scripts/: train_model.py
tests/: __init__.py  test_ml.py  test_reporters.py  test_scanner.py
tests/fixtures/: secure_mcp.json  vulnerable_mcp.json
