[tool.poetry]
name = "mcpscan"
version = "0.1.0"
description = "Security scanner for MCP (Model Context Protocol) servers and AI agent configurations"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/mcpscan"
repository = "https://github.com/yourusername/mcpscan"
keywords = ["mcp", "security", "ai", "llm", "scanner", "vulnerability", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
pyyaml = "^6.0.1"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
ml = ["xgboost"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"

[tool.poetry.scripts]
mcpscan = "mcpscan.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
